@@ -961,9 +961,10 @@ static int fdlist_to_fdset(value fdlist, fd_set *fdset)
 static value fdset_to_fdlist(value fdlist, fd_set *fdset)
 {
   value res = Val_int(0);
-  Begin_roots2(fdlist, res)
+  value s = Val_int(0);
+  Begin_roots3(fdlist, res, s)
     for (/*nothing*/; fdlist != Val_int(0); fdlist = Field(fdlist, 1)) {
-      value s = Field(fdlist, 0);
+      s = Field(fdlist, 0);
       if (FD_ISSET(Socket_val(s), fdset)) {
         value newres = caml_alloc_small(2, 0);
         Field(newres, 0) = s;
